err/slingr.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Eggsac-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_Assets-0.12.egg-info'...
Listing './lib/python3.5/site-packages/Flask_Script-2.0.6.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Pycco-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/Slingr-0.0.13.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/eggsac'...
Compiling './lib/python3.5/site-packages/eggsac/debian.py'...
***   File "./lib/python3.5/site-packages/eggsac/debian.py", line 54
    os.makedirs(parent, 0755)
                           ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/eggsac/eggsac.py'...
***   File "./lib/python3.5/site-packages/eggsac/eggsac.py", line 482
    os.chmod(script_filename, 0755)
                                 ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_script'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/mock'...
Listing './lib/python3.5/site-packages/mock/tests'...
Listing './lib/python3.5/site-packages/mock-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycco'...
Listing './lib/python3.5/site-packages/pycco_resources'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/pystache'...
Listing './lib/python3.5/site-packages/pystache/commands'...
Listing './lib/python3.5/site-packages/pystache/tests'...
Listing './lib/python3.5/site-packages/pystache/tests/data'...
Listing './lib/python3.5/site-packages/pystache/tests/data/locator'...
Listing './lib/python3.5/site-packages/pystache/tests/examples'...
Listing './lib/python3.5/site-packages/pystache-0.5.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/slingr'...
Compiling './lib/python3.5/site-packages/slingr/build.py'...
***   File "./lib/python3.5/site-packages/slingr/build.py", line 332
    print "%s: Invalidated: coburl=%r, page_profile=%r" % (
                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/slingr/common.py'...
***   File "./lib/python3.5/site-packages/slingr/common.py", line 400
    except OSError, why:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/slingr/json2yaml.py'...
***   File "./lib/python3.5/site-packages/slingr/json2yaml.py", line 5
    print yaml.safe_dump(json.load(f), default_flow_style=False)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/slingr/server.py'...
***   File "./lib/python3.5/site-packages/slingr/server.py", line 220
    print "\n{0}: Starting build".format(timestamp(build_start))
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/slingr/testsuite'...
Compiling './lib/python3.5/site-packages/slingr/testsuite/__init__.py'...
***   File "./lib/python3.5/site-packages/slingr/testsuite/__init__.py", line 203
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/smartypants-2.0.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/ua_parser'...
Listing './lib/python3.5/site-packages/ua_parser-0.7.3.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv-15.1.0.dist-info'...
Listing './lib/python3.5/site-packages/virtualenv_support'...
Listing './lib/python3.5/site-packages/webassets'...
Listing './lib/python3.5/site-packages/webassets/ext'...
Listing './lib/python3.5/site-packages/webassets/filter'...
Listing './lib/python3.5/site-packages/webassets/filter/cssrewrite'...
Listing './lib/python3.5/site-packages/webassets/filter/jspacker'...
Listing './lib/python3.5/site-packages/webassets/filter/rjsmin'...
Listing './lib/python3.5/site-packages/webassets-0.12.1.egg-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
